<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginRegisterNavigation">

    <navigation
        android:id="@+id/AppNavigation"
        app:startDestination="@id/MainPageFragment" >
        <fragment
            android:id="@+id/MainPageFragment"
            android:name="com.example.headxtension.Controlleur.MainPageFragment"
            android:label="@string/main_page_fragment_label"
            tools:layout="@layout/fragment_main_page">

            <action
                android:id="@+id/action_MainPageFragment_to_NewCredentialFragment"
                app:destination="@id/NewCredentialFragment"
                app:popUpToInclusive="false" />

        </fragment>
        <fragment
            android:id="@+id/NewCredentialFragment"
            android:name="com.example.headxtension.Controlleur.NewCredentialFragment"
            android:label="@string/main_page_fragment_label"
            tools:layout="@layout/fragment_new_credential_entry" />
        <action
            android:id="@+id/action_AppNavigation_to_LoginRegisterNavigation"
            app:destination="@id/LoginRegisterNavigation"
            app:popUpTo="@id/AppNavigation"
            app:popUpToInclusive="true" />
    </navigation>
    <navigation
        android:id="@+id/LoginRegisterNavigation"
        app:startDestination="@id/LoginFragment" >
        <fragment
            android:id="@+id/LoginFragment"
            android:name="com.example.headxtension.Controlleur.LoginFragment"
            android:label="@string/login_fragment_label"
            tools:layout="@layout/fragment_login">
            <action
                android:id="@+id/action_LoginFragment_to_SigninFragment"
                app:destination="@id/SigninFragment"
                app:popUpTo="@id/LoginFragment"
                app:popUpToInclusive="true" />
        </fragment>
        <fragment
            android:id="@+id/SigninFragment"
            android:name="com.example.headxtension.Controlleur.SigninFragment"
            android:label="@string/signin_fragment_label"
            tools:layout="@layout/fragment_signin"/>
        <action
            android:id="@+id/action_LoginRegisterNavigation_to_AppNavigation"
            app:destination="@id/AppNavigation"
            app:popUpTo="@id/LoginRegisterNavigation"
            app:popUpToInclusive="true" />
    </navigation>


</navigation>
